--- a/app/index.html
+++ b/app/index.html
@@ -7,30 +7,21 @@
 <link rel="stylesheet" href="styles/opendap-viewer.css"/>
 </head>
 <body>
-<nav class="navbar navbar-default navbar-static-top">
+<div id="frame">
   <div class="container-fluid">
-    <div class="navbar-header">
-      <button class="navbar-toggle" data-target=".navbar-collapse" data-toggle="collapse" type="button">
-        <span class="sr-only"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" ui-sref="app.main">opendap-viewer</a>
-    </div>
-    <div class="navbar-collapse collapse">
-    </div>
+    <div ui-view></div>
   </div>
-</nav>
-<div class="container-fluid">
-  <div ui-view></div>
 </div>
 <script src="scripts/lib/traceur-runtime.min.js"></script>
 <script src="scripts/lib/jquery.min.js"></script>
+<script src="scripts/lib/jquery-ui.min.js"></script>
 <script src="scripts/lib/bootstrap.min.js"></script>
 <script src="scripts/lib/angular.min.js"></script>
 <script src="scripts/lib/angular-ui-router.min.js"></script>
+<script src="scripts/lib/angular-dragdrop.min.js"></script>
 <script src="scripts/lib/d3.min.js"></script>
+<script src="scripts/lib/three.min.js"></script>
+<script src="scripts/lib/jqdap.js"></script>
 <script src="scripts/opendap-viewer.js"></script>
 </body>
 </html>
