Add loading data

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div id="frame">
-  <div class="container-fluid">
+  <div class="container-fluid" style="padding-top: 15px; padding-bottom: 15px;">
     <div ui-view></div>
   </div>
 </div>
