--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
 <script src="scripts/lib/angular-ui-router.min.js"></script>
 <script src="scripts/lib/angular-dragdrop.min.js"></script>
 <script src="scripts/lib/d3.min.js"></script>
+<script src="scripts/lib/topojson.js"></script>
 <script src="scripts/lib/three.min.js"></script>
 <script src="scripts/lib/jqdap.js"></script>
 <script src="scripts/opendap-viewer.js"></script>
