Enable drag and drop on touch devices

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
 <script src="scripts/lib/traceur-runtime.min.js"></script>
 <script src="scripts/lib/jquery.min.js"></script>
 <script src="scripts/lib/jquery-ui.min.js"></script>
+<script src="scripts/lib/jquery.ui.touch-punch.js"></script>
 <script src="scripts/lib/bootstrap.min.js"></script>
 <script src="scripts/lib/angular.min.js"></script>
 <script src="scripts/lib/angular-ui-router.min.js"></script>
