--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,10 @@
 <script src="scripts/lib/bootstrap.min.js"></script>
 <script src="scripts/lib/angular.min.js"></script>
 <script src="scripts/lib/angular-ui-router.min.js"></script>
+<script src="scripts/lib/angular-ui-router.min.js"></script>
 <script src="scripts/lib/angular-dragdrop.min.js"></script>
+<script src="scripts/lib/ui-bootstrap.min.js"></script>
+<script src="scripts/lib/ui-bootstrap-tpls.min.js"></script>
 <script src="scripts/lib/d3.min.js"></script>
 <script src="scripts/lib/topojson.js"></script>
 <script src="scripts/lib/three.min.js"></script>
