--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,7 @@
 <script src="scripts/lib/d3.min.js"></script>
 <script src="scripts/lib/topojson.js"></script>
 <script src="scripts/lib/three.min.js"></script>
+<script src="scripts/lib/TrackballControls.js"></script>
 <script src="scripts/lib/jqdap.js"></script>
 <script src="scripts/opendap-viewer.js"></script>
 </body>
