--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
 <script src="scripts/lib/bootstrap.min.js"></script>
 <script src="scripts/lib/angular.min.js"></script>
 <script src="scripts/lib/angular-ui-router.min.js"></script>
+<script src="scripts/lib/angular-ui-router.min.js"></script>
 <script src="scripts/lib/angular-dragdrop.min.js"></script>
+<script src="scripts/lib/ui-bootstrap.min.js"></script>
+<script src="scripts/lib/ui-bootstrap-tpls.min.js"></script>
 <script src="scripts/lib/d3.min.js"></script>
 <script src="scripts/lib/topojson.js"></script>
 <script src="scripts/lib/three.min.js"></script>
+<script src="scripts/lib/TrackballControls.js"></script>
 <script src="scripts/lib/jqdap.js"></script>
 <script src="scripts/opendap-viewer.js"></script>
 </body>
