Add iPad support

--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <html ng-app="opendap-viewer">
 <head>
 <meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
 <title>opendap-viewer</title>
 <link rel="stylesheet" href="styles/lib/bootstrap.min.css"/>
 <link rel="stylesheet" href="styles/opendap-viewer.css"/>
@@ -24,7 +25,7 @@
 <script src="scripts/lib/traceur-runtime.min.js"></script>
 <script src="scripts/lib/jquery.min.js"></script>
 <script src="scripts/lib/jquery-ui.min.js"></script>
-<script src="scripts/lib/jquery.ui.touch-punch.js"></script>
+<script src="scripts/lib/jquery.ui.touch-punch.min.js"></script>
 <script src="scripts/lib/bootstrap.min.js"></script>
 <script src="scripts/lib/angular.min.js"></script>
 <script src="scripts/lib/angular-dragdrop.min.js"></script>
