--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
-<title>opendap-viewer</title>
+<title>Opendap Viewer</title>
+<link rel="apple-touch-icon-precomposed" href="images/icon.png"/>
 <link rel="stylesheet" href="styles/lib/bootstrap.min.css"/>
 <link rel="stylesheet" href="styles/opendap-viewer.css"/>
 </head>
